--- a/apollo/frontend/templates/frontend/login_user.html
+++ b/apollo/frontend/templates/frontend/login_user.html
@@ -31,6 +31,10 @@
                 {% if login_user_form.errors %}
                 <div class="alert alert-danger">{% trans %}Your username and password <strong>did not match</strong>. Please try again.{% endtrans %}</div>
                 {% endif %}
+                <a href="#" class="persona-button"><span>Sign in with Persona</span></a>
+                <div class="strike">
+                  <span>or</span>
+                </div>
                 <div class="form-group">
                   <div class="input-group">
                     <span class="input-group-addon input-sm">
