Updated Persona button label

--- a/apollo/frontend/templates/frontend/login_user.html
+++ b/apollo/frontend/templates/frontend/login_user.html
@@ -31,7 +31,7 @@
                 {% if login_user_form.errors %}
                 <div class="alert alert-danger">{% trans %}Your username and password <strong>did not match</strong>. Please try again.{% endtrans %}</div>
                 {% endif %}
-                <a href="#" class="persona-button"><span>Sign in with Persona</span></a>
+                <a href="#" class="persona-button"><span>Sign In with Persona</span></a>
                 <div class="strike">
                   <span>or</span>
                 </div>
