--- a/apollo/frontend/templates/frontend/login_user.html
+++ b/apollo/frontend/templates/frontend/login_user.html
@@ -27,14 +27,18 @@
               {% for msg in get_flashed_messages() %}
               <div class="alert alert-info">{{ msg }}</div>
               {% endfor %}
-              <form name="login_user_form" class="form-vertical" action="{{ url_for_security('login') }}" method="POST" accept-charset="utf-8" autocomplete="off">{{ login_user_form.hidden_tag() }}
                 {% if login_user_form.errors %}
                 <div class="alert alert-danger">{% trans %}Your username and password <strong>did not match</strong>. Please try again.{% endtrans %}</div>
                 {% endif %}
-                <a href="#" class="persona-button"><span>Sign In with Persona</span></a>
+              <form name="persona_login_form" id="persona_login_form" class="form-vertical" action="{{ url_for('auth.persona_login') }}" method="POST" accept-charset="utf-8">
+                <input type="hidden" name="assertion" id="assertion">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                <a href="#" class="persona-button" id="persona-signin"><span>Sign In with Persona</span></a>
+              </form>
                 <div class="strike">
                   <span>or</span>
                 </div>
+              <form name="login_user_form" class="form-vertical" action="{{ url_for_security('login') }}" method="POST" accept-charset="utf-8" autocomplete="off" autocorrect="off" autocapitalize="off">{{ login_user_form.hidden_tag() }}
                 <div class="form-group">
                   <div class="input-group">
                     <span class="input-group-addon input-sm">
@@ -59,8 +63,19 @@
         </div>
       </div>
     </div>
+    {%- assets 'apollo_js' %}
+    <script type="text/javascript" src="{{ ASSET_URL }}" charset="utf-8"></script>
+    {%- endassets %}
+    {% block scripts -%}
+    <script src="https://login.persona.org/include.js"></script>
     <script type="text/javascript">
-      inptElements.setAttribute("autocomplete","off");
+      $('#persona-signin').click(function () {
+        navigator.id.get(function (assertion) {
+          $('#assertion').val(assertion);
+          $('#persona_login_form').submit();
+        }, {siteName: "Apollo"});
+      });
     </script>
+    {%- endblock %}
   </body>
 </html>
