Referenced favicon in templates.

--- a/apollo/frontend/templates/frontend/login_user.html
+++ b/apollo/frontend/templates/frontend/login_user.html
@@ -9,6 +9,7 @@
     <!-- Le styles -->
     {% assets 'apollo_css' %}
     <link rel="stylesheet" href="{{ ASSET_URL }}">
+    <link rel="icon" type="image/ico" href="{{ url_for('static', filename='ico/favicon.ico') }}">
     {% endassets %}
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
