--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -10,6 +10,7 @@
     <!-- Le styles -->
     {% assets 'apollo_css' %}
     <link rel="stylesheet" href="{{ ASSET_URL }}" type="text/css" media="screen,projection" charset="utf-8">
+    <link rel="icon" type="image/ico" href="{{ url_for('static', filename='ico/favicon.ico') }}">
     {% endassets %}
     {% block stylesheets %}{% endblock %}
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
