Referenced favicon within Error Templates.

--- a/apollo/frontend/templates/403.html
+++ b/apollo/frontend/templates/403.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% assets 'apollo_css' %}
     <link rel="stylesheet" href="{{ ASSET_URL }}" type="text/css" media="screen,projection" charset="utf-8">
+    <link rel="icon" type="image/ico" href="{{ url_for('static', filename='ico/favicon.ico') }}">
     {% endassets %}
   </head>
  <body>
