--- a/apollo/frontend/templates/frontend/macros/dashboard_filter.html
+++ b/apollo/frontend/templates/frontend/macros/dashboard_filter.html
@@ -15,8 +15,8 @@
 <div class="form-group">
 	<a class="btn btn-default btn-sm" id="filter_reset">{% trans %}Reset{% endtrans %}</a>
 </div>
-<div class="form-group">
+<!--<div class="form-group">
     <input type="checkbox" id="toggle-two" data-onstyle="default" data-offstyle="default"> 
-</div>
+</div>-->
 </form>
 {% endmacro %}
