--- a/apollo/frontend/templates/frontend/critical_incident_summary.html
+++ b/apollo/frontend/templates/frontend/critical_incident_summary.html
@@ -26,6 +26,7 @@
 			</ul>
 			<div class="tab-content">
 				<div class="tab-pane active" id="table">
+					<h3>{% trans %}Summary{% endtrans %}</h3>
 					<table class="table table-bordered table-striped">
 						<tr>
 							<th width="250">{% trans %}Location{% endtrans %}</th>
@@ -62,6 +63,57 @@
 						{% endfor %}
 						{% endfor %}
 					</table>
+					<h3>{% trans %}Detail{% endtrans %}</h3>
+					{% if dataframe.count().any() %}
+					{% for group in field_groups %}
+					{% if field_groups[group] %}
+					<h4>{{ group }}</h4>
+						{% for field in field_groups[group] if not field.represents_boolean %}
+							{% set question_summary = form|checklist_question_summary(field, location, dataframe) %}
+							{% set stats = question_summary.stats %}
+							<table width="100%" class="table table-striped table-bordered">
+								<tr>
+									<td width="30" rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><strong>{{ field.name }}</strong></td>
+									<td rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><a href="{{ url_for('analysis.process_analysis_with_location_and_tag', form_id=form.pk, location_id=location.pk, tag=field.name) }}">{{ field.description }}</a></td>
+									<td>&nbsp;</td>
+									{% if stats.type == 'continuous' %}
+									<td bgcolor="#eee">{% trans %}Mean{% endtrans %}</td>
+									{% else %}
+									{% for label, unused in stats.options|dictsort(false, 'value') %}
+									<td>{{ _('%(label)s', label=label) }}</td>
+									{% endfor %}
+									{% endif %}
+									<td width="100" bgcolor="#eee">{% trans %}Reported{% endtrans %}</td>
+									<td width="100" bgcolor="#eee">{% trans %}Missing{% endtrans %}</td>
+								</tr>
+								<tr>
+									<td class="text-centered"><strong>{% trans %}All{% endtrans %}</strong></td>
+									{% if stats.type == 'continuous' %}
+									<td><strong>{{ stats.mean|mean_filter }}</strong></td>
+									{% else %}
+									{% for opt, option in stats.options|dictsort(false, 'value') %}
+									<td><strong>{{ stats.value_counts[option]|default(0)|percent_of(stats.value_counts_sum)|round|int }}% ({{ stats.value_counts[option]|default(0) }})</strong></td>
+									{% endfor %}
+									{% endif %}
+									<td><strong>{{ stats.count|percent_of(stats.size)|round|int }}% ({{ stats.count }}) </strong></td>
+									<td><strong>{{ stats.diff|percent_of(stats.size)|round|int }}% ({{ stats.diff }}) </strong></td>
+								</tr>
+								{% for group in stats.urban %}
+								<tr>
+									<td>{{ group }}</td>
+								</tr>
+								{% endfor %}
+							</table>
+						{% endfor %}
+					{% endif %}
+					{% endfor %}
+				{% else %}
+				<table width="100%" class="table table-striped table-bordered">
+					<tr class="warning">
+						<td style="text-align:center">{% trans %}No data available{% endtrans %}</td>
+					</tr>
+				</table>
+				{% endif %}
 				</div>
 			</div>
 		</div>
