--- a/apollo/frontend/templates/frontend/macros/form_edit_form.html
+++ b/apollo/frontend/templates/frontend/macros/form_edit_form.html
@@ -4,7 +4,7 @@
 {%- for field in form -%}
 {%- if field.type != 'CSRFTokenField' -%}
 <div class="form-group {% if field.errors %}has-error{% endif %}">
-    {{ field.label(class_='col-sm-3 col-sm-offset-1 control-label') }}
+    {{ field.label(class_='col-sm-4 control-label') }}
     <div class="col-sm-6">
         {{ field(class_='form-control span3') }}
         {% if field.errors %}
