--- a/apollo/frontend/templates/frontend/form_list.html
+++ b/apollo/frontend/templates/frontend/form_list.html
@@ -1,6 +1,7 @@
 {% extends "frontend/_layout.html" %}
 {% block toolbar %}
-<a class="btn btn-sm btn-default pull-right" href="{{ url_for('forms.new_form') }}"><span class="glyphicon glyphicon-plus"></span> {% trans %}Add form{% endtrans %}</a>
+<a class="btn btn-sm btn-warning pull-right" data-toggle="modal" data-target="#checklistModal" href="#"><span class="glyphicon glyphicon-list-alt"></span> {% trans %}Create checklists{% endtrans %}</a>
+<a class="btn btn-sm btn-default pull-right" href="{{ url_for('forms.new_form') }}" style="margin-right: 1em"><span class="glyphicon glyphicon-plus"></span> {% trans %}Add form{% endtrans %}</a>
 {% endblock %}
 {% block content %}
 <div class="row">
@@ -32,6 +33,34 @@
       {% endfor %}
       </tbody>
     </table>
+    <form class="form-horizontal" method="POST" action="" id="checklistInitForm">
+      <div class="modal fade" id="checklistModal" tabindex="-1" role="dialog" aria-labelledby="checklistModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="checklistModalLabel">{% trans %}Create checklists{% endtrans %}</h4>
+            </div>
+            <div class="modal-body">
+                {{ init_form.hidden_tag() }}
+                <div class="form-group">
+                  <label for="{{ init_form.form.id }}" class="col-sm-3">{% trans %}Checklist form{% endtrans %}</label> <div class="col-sm-9">{{ init_form.form(class_='form-control') }}</div>
+                </div>
+                <div class="form-group">
+                  <label for="{{ init_form.role.id }}" class="col-sm-3">{% trans %}Role{% endtrans %}</label> <div class="col-sm-9">{{ init_form.role(class_='form-control') }}</div>
+                </div>
+                <div class="form-group">
+                  <label for="{{ init_form.location_type.id }}" class="col-sm-3">{% trans %}Location type{% endtrans %}</label> <div class="col-sm-9">{{ init_form.location_type(class_='form-control') }}</div>
+                </div>
+            </div>
+            <div class="modal-footer">
+              <button type="submit" form="checklistInitForm" class="btn btn-warning">{% trans %}Create checklists{% endtrans %}</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">{% trans %}Close{% endtrans %}</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
 {% endblock %}
