--- a/apollo/frontend/templates/frontend/form_list.html
+++ b/apollo/frontend/templates/frontend/form_list.html
@@ -4,6 +4,38 @@
 <a class="btn btn-sm btn-default pull-right" href="{{ url_for('forms.new_form') }}" style="margin-right: 1em"><span class="glyphicon glyphicon-plus"></span> {% trans %}Add form{% endtrans %}</a>
 {% endblock %}
 {% block content %}
+{% with messages = get_flashed_messages(category_filter=['checklist_init_success']) %}
+{% if messages %}
+<div class="row">
+  <div class="col-md-12">
+    <div class="alert alert-success alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      {% for message in messages %}
+      <p>{{ message }}</p>
+      {% endfor %}
+    </div>
+  </div>
+</div>
+{% endif %}
+{% endwith %}
+{% with messages = get_flashed_messages(category_filter=['checklist_init_failure']) %}
+{% if messages %}
+<div class="row">
+  <div class="col-md-12">
+    <div class="alert alert-danger alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      {% for message in messages %}
+      <p>{{ message }}</p>
+      {% endfor %}
+    </div>
+  </div>
+</div>
+{% endif %}
+{% endwith %}
 <div class="row">
 	<div class="col-md-12">
     <table class="table table-striped table-bordered table-hover">
@@ -33,7 +65,7 @@
       {% endfor %}
       </tbody>
     </table>
-    <form class="form-horizontal" method="POST" action="" id="checklistInitForm">
+    <form class="form-horizontal" method="POST" action="{{ url_for('forms.checklist_init') }}" id="checklistInitForm">
       <div class="modal fade" id="checklistModal" tabindex="-1" role="dialog" aria-labelledby="checklistModalLabel">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -54,7 +86,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-              <button type="submit" form="checklistInitForm" class="btn btn-warning">{% trans %}Create checklists{% endtrans %}</button>
+              <button type="submit" class="btn btn-warning">{% trans %}Create checklists{% endtrans %}</button>
               <button type="button" class="btn btn-default" data-dismiss="modal">{% trans %}Close{% endtrans %}</button>
             </div>
           </div>
