--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -38,23 +38,24 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <!-- main menu -->
+            {% autoescape False %}
             {% for menu_item in current_menu.submenu('main').children %}
             {% if not menu_item.children and menu_item.visible %}
-            <li><a href="{{ menu_item.url }}">{{ menu_item.text|safe }}</a></li>
+            <li><a href="{{ menu_item.url }}">{{ menu_item.icon }} {{ _(menu_item.text) }}</a></li>
             {% elif menu_item.visible %}
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ menu_item.text|safe }} <b class="caret"></b></a>
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ menu_item.icon }} {{ _(menu_item.text) }} <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 {% if menu_item.children|count < 2 %}
                 {% for submenu_item in menu_item.children[0].dynamic_list %}
-                <li><a href="{{ submenu_item.url }}">{{ submenu_item.text|safe }}</a></li>
+                <li><a href="{{ submenu_item.url }}">{{ submenu_item.icon }} {{ _(submenu_item.text) }}</a></li>
                 {% endfor %}
                 {% else %}
                 {% for submenu_item in menu_item.children %}
                 <li class="dropdown-submenu">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ submenu_item.text|safe }}</a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ submenu_item.icon }} {{ _(submenu_item.text) }}</a>
                   <ul class="dropdown-menu">
                     {% for subsubmenu_item in submenu_item.dynamic_list %}
-                    <li><a href="{{ subsubmenu_item.url }}">{{ subsubmenu_item.text|safe }}</a></li>
+                    <li><a href="{{ subsubmenu_item.url }}">{{ subsubmenu_item.icon }} {{ _(subsubmenu_item.text) }}</a></li>
                     {% endfor %}
                   </ul>
                 </li>
@@ -64,6 +65,7 @@
             </li>
             {% endif %}
             {% endfor %}
+            {% endautoescape %}
 
             <li class="divider-vertical"></li>
             <li>
@@ -85,7 +87,7 @@
               {% endif %}
                 <li class="divider"></li>
               {%- if perms.role('admin').can() -%}
-                <li><a href="{{ url_for('deployment.index_view') }}"><i class="glyphicon glyphicon-user"></i> {% trans %}Admin{% endtrans %}</a></li>
+                <li><a href="{{ url_for('deployment.index_view') }}"><i class="glyphicon glyphicon-user"></i> {{ _('Admin') }}</a></li>
                 <li class="divider"></li>
               {%- endif -%}
               {%- if current_menu.submenu('user.locations_builder').visible -%}
@@ -100,7 +102,7 @@
               {%- if current_menu.submenu('user.locations_builder').visible or current_menu.submenu('user.formbuilder').visible -%}
                 <li class="divider"></li>
               {%- endif -%}
-                <li><a href="{{ url_for_security('logout') }}"><i class="glyphicon glyphicon-log-out"></i> {% trans %}Logout{% endtrans %}</a></li>
+                <li><a href="{{ url_for_security('logout') }}"><i class="glyphicon glyphicon-log-out"></i> {{ _('Logout') }}</a></li>
               </ul>
             </li>
           </ul>
